--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
       padding: 4rem 2rem;
       margin: 2rem 0;
     }
-    /* PASANGAN, TANGGAL, LOKASI: Gradient merah-hitam */
     .couple-section {
       background: linear-gradient(rgba(229,9,20,0.8), rgba(20,20,20,0.8));
       text-align: center;
@@ -133,12 +132,9 @@
       overflow: hidden;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     }
-    /* GALLERY SECTION: overlay gradient hitam-merah */
     .gallery-section {
-      /* background-color: var(--nikahfix-dark); */
       position: relative;
       z-index: 1;
-      /* gradient hitam-merah di atas foto galeri */
       background: linear-gradient(rgba(20,20,20,0.8), rgba(229,9,20,0.7));
     }
     .gallery-section::before {
@@ -332,6 +328,10 @@
       z-index: 100;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     }
+    .message-list-item {
+      border-bottom: 1px solid #333;
+      padding: 1rem 0;
+    }
   </style>
 </head>
 
@@ -376,7 +376,7 @@
     <div class="couple-container">
       <!-- Bride Card -->
       <div class="couple-card">
-        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750472739/Ochy_tavucd.jpg" alt="Taroci Febriani Dengga" class="couple-img">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750522065/Ochy_zrgyos.jpg" alt="Taroci Febriani Dengga" class="couple-img">
         <div class="couple-info">
           <h3 class="text-2xl font-bold">Taroci Febriani</h3>
           <h4 class="text-2xl font-bold mb-2">Dengga</h4>
@@ -544,6 +544,15 @@
       </form>
     </div>
   </section>
+
+  <!-- PESAN UCAPAN Section (letakkan setelah RSVP) -->
+  <section class="section" id="messages">
+    <h2 class="text-3xl font-bold mb-2">PESAN UCAPAN</h2>
+    <p class="text-xl mb-8">Ucapan & Doa Dari Teman-Teman</p>
+    <div id="messageList" style="max-width:600px;margin:0 auto;background:rgba(20,20,20,0.85);border-radius:10px;padding:2rem;min-height:100px;">
+      <div style="text-align:center;color:#aaa;">Belum ada pesan masuk.</div>
+    </div>
+  </section>
   <!-- Footer -->
   <footer class="footer">
     <p class="text-xl mb-4">Terima Kasih Telah Menjadi Bagian Dari Kisah Kami</p>
@@ -662,16 +671,66 @@
         window.addEventListener('scroll', tryPlay);
       });
     });
-    // RSVP Form Submission
+
+    // ========== RSVP & PESAN UCAPAN Section ==========
+    // GANTI DENGAN URL SheetDB kamu!
+    const API_URL = "https://sheetdb.io/api/v1/lbdnhxyh09ysm";
+
     const rsvpForm = document.getElementById('rsvpForm');
-    rsvpForm.addEventListener('submit', (e) => {
+    const messageList = document.getElementById('messageList');
+
+    rsvpForm.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const name = document.getElementById('name').value;
+      const name = document.getElementById('name').value.trim();
       const attendance = document.getElementById('attendance').value;
-      const message = document.getElementById('message').value;
-      alert(`Terima kasih ${name} telah mengkonfirmasi kehadiran!\nStatus: ${attendance === "yes" ? "Akan Hadir" : "Tidak Bisa Hadir"}\nPesan: ${message}`);
+      const message = document.getElementById('message').value.trim();
+
+      if (!name || !attendance) {
+        alert('Nama dan kehadiran wajib diisi!');
+        return;
+      }
+
+      // Kirim ke SheetDB
+      await fetch(API_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          data: {
+            name,
+            attendance: attendance === "yes" ? "Akan Hadir" : "Tidak Bisa Hadir",
+            message,
+            time: new Date().toLocaleString("id-ID", { hour12: false })
+          }
+        })
+      });
+
       rsvpForm.reset();
+      alert(`Terima kasih ${name} telah mengkonfirmasi kehadiran!`);
+      loadMessages(); // Refresh pesan
     });
+
+    async function loadMessages() {
+      const resp = await fetch(API_URL);
+      const data = await resp.json();
+      messageList.innerHTML = "";
+      if (data.length === 0) {
+        messageList.innerHTML = '<div style="text-align:center;color:#aaa;">Belum ada pesan masuk.</div>';
+        return;
+      }
+      data.reverse().forEach(msg => {
+        const div = document.createElement("div");
+        div.className = "message-list-item";
+        div.innerHTML = `
+          <div style="font-weight:bold;color:#e50914;">${msg.name} <span style="color:#888;font-size:0.9em;font-weight:normal;">(${msg.attendance})</span></div>
+          <div style="color:#fff;margin:0.5rem 0 0.25rem 0;">${msg.message ? msg.message : '<span style="color:#bbb;font-style:italic;">(Tanpa pesan)</span>'}</div>
+          <div style="color:#aaa;font-size:0.8em;">${msg.time}</div>
+        `;
+        messageList.appendChild(div);
+      });
+    }
+    loadMessages();
+    setInterval(loadMessages, 10000);
+    // ========== END RSVP & PESAN UCAPAN ==========
   </script>
 </body>
 </html>
