--- a/index.html
+++ b/index.html
@@ -332,7 +332,6 @@
       border-bottom: 1px solid #333;
       padding: 1rem 0;
     }
-    /* Custom selfie button style */
     .custom-selfie-btn {
       display: flex;
       align-items: center;
@@ -503,8 +502,42 @@
     <h2 class="text-3xl font-bold mb-2">OUR GALLERY</h2>
     <p class="text-xl mb-8">Momen Spesial Dalam Perjalanan Kami</p>
     <div class="gallery-grid">
-      <!-- ... (gallery items as before) ... -->
-      <!-- Gallery content omitted for brevity -->
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481977/3_bwfu7h.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481977/3_bwfu7h.jpg" alt="Gallery 1" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481977/2_wu6ql0.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481977/2_wu6ql0.jpg" alt="Gallery 2" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481979/1_irku7g.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481979/1_irku7g.jpg" alt="Gallery 3" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481978/4_ho55ni.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481978/4_ho55ni.jpg" alt="Gallery 4" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481987/8_em0i26.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481987/8_em0i26.jpg" alt="Gallery 5" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481983/7_jpst0c.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481983/7_jpst0c.jpg" alt="Gallery 6" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481981/5_juuu5c.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481981/5_juuu5c.jpg" alt="Gallery 7" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481985/9_jqnr3w.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481985/9_jqnr3w.jpg" alt="Gallery 8" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481980/6_icp4pp.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481980/6_icp4pp.jpg" alt="Gallery 9" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481987/12_ij51yq.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481987/12_ij51yq.jpg" alt="Gallery 10" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481985/10_lapl5q.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481985/10_lapl5q.jpg" alt="Gallery 11" class="gallery-img">
+      </div>
+      <div class="gallery-item" onclick="openModal('https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481985/11_r9bboe.jpg')">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750481985/11_r9bboe.jpg" alt="Gallery 12" class="gallery-img">
+      </div>
     </div>
   </section>
   <!-- RSVP Section -->
