--- a/index.html
+++ b/index.html
@@ -305,13 +305,17 @@
         flex-direction: row;
         flex-wrap: nowrap;
         overflow-x: auto;
-        gap: 1.5rem;
+        gap: 1.2rem;
         justify-content: flex-start;
         -webkit-overflow-scrolling: touch;
       }
       .couple-card {
-        min-width: 250px;
-        flex: 0 0 auto;
+        min-width: 180px;
+        max-width: 200px;
+        width: 60vw;
+      }
+      .couple-img {
+        height: 170px;
       }
       .countdown {
         flex-direction: column;
