--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -83,6 +82,9 @@
       overflow: hidden;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
       transition: transform 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .couple-card:hover {
       transform: translateY(-10px);
@@ -91,6 +93,7 @@
       width: 100%;
       height: 300px;
       object-fit: cover;
+      display: block;
     }
     .couple-info h3,
     .couple-info h4 {
@@ -100,6 +103,8 @@
       display: flex;
       flex-direction: column;
       height: 100%;
+      padding: 1rem;
+      box-sizing: border-box;
     }
     .date-card {
       background-color: rgba(20, 20, 20, 0.8);
@@ -282,8 +287,6 @@
       cursor: pointer;
       font-size: 1.5rem;
     }
-
-    /* RESPONSIVE: Foto pasangan pria & wanita benar-benar bersebelahan tanpa scroll di HP */
     @media (max-width: 768px) {
       .couple-container {
         flex-direction: row;
@@ -293,7 +296,7 @@
         gap: 1rem;
         width: 100%;
         margin: 0 auto;
-        overflow: visible;
+        overflow-x: hidden;
       }
       .couple-card {
         width: 48%;
@@ -373,7 +376,6 @@
     }
   </style>
 </head>
-
 <body>
   <!-- Navigation -->
   <nav class="nav">
