--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="couple-info">
           <h3 class="text-2xl font-bold">Taroci Febriani</h3>
           <h4 class="text-2xl font-bold mb-2">Dengga</h4>
-          <p class="text-gray-400">Putri dari Bapak <span class="text-white">Yesaya Dengga (Alm.)</span> & Ibu <span class="text-white">Magdalena Dengga - Manafe</span></p>
+          <p class="text-gray-400">Putri dari Bapak <span class="text-white">Yesaya Dengga (Alm)</span> & Ibu <span class="text-white">Magdalena Dengga - Manafe</span></p>
           <div class="mt-4" style="text-align:center;">
             <a href="https://www.instagram.com/its_cdngg?igsh=dXUzMDBrNTVhZnBu" target="_blank" class="text-red-500">
               <i class="fab fa-instagram"></i>
@@ -435,7 +435,7 @@
         <div class="couple-info">
           <h3 class="text-2xl font-bold">Peter Anggara</h3>
           <h4 class="text-2xl font-bold mb-2">Nalle</h4>
-          <p class="text-gray-400">Putra dari Bapak <span class="text-white">Jermias Nalle</span> & Ibu <span class="text-white">Iriantini M J Nalle - Takalapeta, S.H., M.H.</span></p>
+          <p class="text-gray-400">Putra dari Bapak <span class="text-white">Jermias Nalle</span> & Ibu <span class="text-white">Iriantini M J Nalle - Takalapeta, S.H., M.H</span></p>
           <div class="mt-4" style="text-align:center;">
             <a href="https://www.instagram.com/anggara31p?igsh=Y3FrOGkxcjk5Y2xl" target="_blank" class="text-red-500">
               <i class="fab fa-instagram"></i>
