--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     .play-button:hover { background-color: #f40612; transform: scale(1.05);}
     .section { padding: 4rem 2rem; margin: 2rem 0;}
     .slide-section { min-height: 40vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: linear-gradient(rgba(229,9,20,0.88), rgba(20,20,20,0.92)); border-radius: 16px; margin-bottom: 2rem; box-shadow: 0 5px 30px rgba(0,0,0,0.35);}
-    .slide-navigation { display: flex; justify-content: center; gap: 1.5rem; margin-top: 1.5rem;}
-    .slide-nav-btn { background: var(--nikahfix-dark); color: #fff; border: none; padding: .75rem 1.5rem; border-radius: 5px; font-size: 1.2rem; cursor: pointer; transition: background .2s;}
-    .slide-nav-btn:hover { background: var(--nikahfix-red);}
     .family-columns { display: flex; justify-content: center; gap: 2rem; width: 100%; max-width: 800px; margin: 0 auto; }
     .family-col { flex: 1 1 0; min-width: 180px; background: rgba(30,30,30,0.8); border-radius: 10px; padding: 1.5rem; }
     .family-col h3 { font-size: 1.2rem; font-weight: bold; margin-bottom: .75rem; color: var(--nikahfix-red);}
@@ -31,14 +28,9 @@
     }
     /* Fade animation */
     .fade-in { animation: fadeInUp .6s cubic-bezier(.39,.575,.565,1) both;}
-    .fade-out { animation: fadeOutDown .5s cubic-bezier(.39,.575,.565,1) both;}
     @keyframes fadeInUp {
       0% { opacity:0; transform: translateY(40px);}
       100% {opacity:1; transform: translateY(0);}
-    }
-    @keyframes fadeOutDown {
-      0% { opacity:1; transform: translateY(0);}
-      100% {opacity:0; transform: translateY(40px);}
     }
     .couple-section, .date-section, .location-section { background: linear-gradient(rgba(229,9,20,0.8),rgba(20,20,20,0.8)); text-align: center;}
     .couple-container { display: flex; justify-content: center; gap: 3rem; flex-wrap: wrap; margin-top: 3rem;}
@@ -119,6 +111,59 @@
       </div>
     </div>
   </section>
+
+  <!-- Slide Dokumenter -->
+  <section class="section" id="documenter" style="padding-top:6rem; padding-bottom:0;">
+    <div class="slide-section fade-in" style="text-align:left; max-width:700px; margin:0 auto;">
+      <!-- Foto Dokumentari di atas -->
+      <div style="width:100%; display:flex; justify-content:center; margin-bottom:2rem;">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750648213/Untitled_image_c4pw4e.jpg" alt="Documenter Thumbnail" style="width:100%; max-width:340px; border-radius:10px; box-shadow:0 0 12px rgba(0,0,0,.5);">
+      </div>
+      <!-- Box Dokumenter Peter & Ochy di bawahnya -->
+      <div style="background:rgba(30,30,30,0.93); padding:2rem; border-radius:12px;">
+        <div style="margin-bottom:.4rem;">
+          <span style="color:#e50914;letter-spacing:3px;font-weight:bold;">N</span>
+          <span style="color:#aaa;letter-spacing:2px;font-size:.93rem;">DOCUMENTER</span>
+        </div>
+        <div style="font-size:1.5rem;font-weight:bold;margin-bottom:0.6rem;">Peter & Ochy: Sebelum Hari H</div>
+        <div style="display:flex;align-items:center;gap:.5rem;margin-bottom:.7rem;flex-wrap:wrap;">
+          <span style="color:#19d569; font-weight:bold; font-size:1.03rem;">100% match</span>
+          <span style="background:#444; color:#eee; font-size:.9rem; padding: 2px 8px; border-radius:5px;">SU</span>
+          <span style="background:#444; color:#eee; font-size:.9rem; padding: 2px 8px; border-radius:5px;">2025 06 27</span>
+          <span style="background:#444; color:#eee; font-size:.9rem; padding: 2px 8px; border-radius:5px;">HD</span>
+        </div>
+        <div style="margin-bottom:1rem;">
+          <span style="background:#e50914; color:#fff; font-size:1rem; padding: 7px 14px; border-radius:16px; display:inline-block;">
+            Coming soon on Friday, 27 Juni 2025
+          </span>
+        </div>
+        <div style="color:#eee; margin-bottom: 1.2rem; font-size:1rem;">
+          Setelah Peter dan Ochy dipertemukan dalam situasi yang tepat, di mana keduanya telah siap untuk memulai hubungan bersama, tibalah mereka di awal perjalanan baru menuju pernikahan.
+        </div>
+        <div style="color:#bbb; font-size:.96rem; font-style:italic;">
+          "Dan dari rusuk yang diambil TUHAN Allah dari manusia itu, dibangun-Nyalah seorang perempuan, lalu dibawa-Nya kepada manusia itu." (Kejadian 2:22)
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Slide Breaking News -->
+  <section class="section" id="breaking-news" style="padding-top:0; padding-bottom:0;">
+    <div class="slide-section fade-in" style="background:#111; color:#fff; max-width:700px; margin:0 auto; min-height:40vh; box-shadow:0 5px 30px rgba(0,0,0,0.35); text-align:left;">
+      <h2 style="font-size:2.3rem; font-weight:bold; margin-bottom:1.7rem; margin-top:0;">Breaking News</h2>
+      <div style="width:100%; margin-bottom:1.5rem;">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750648611/WhatsApp_Image_2025-06-19_at_10.58.56_2_gsrbhh.jpg" alt="Breaking News Couple" style="width:100%; max-width:100%; border-radius:16px; object-fit:cover;">
+      </div>
+      <div style="font-size:1.09rem; line-height:1.8; color:#f3f3f3;">
+        Hai semuanya! Ada kabar gembira nih, kita mau ngabarin kalau kita bakal segera menikah!<br><br>
+        Tapi, maaf kalau ngundang lewat online. <br><br>
+        Doain ya supaya semuanya lancar dan kita bisa segera membangun rumah tangga yang bahagia. Makasih banyak atas doa dan dukungannya!<br><br>
+        Best regards,<br>
+        Bride and Groom
+      </div>
+    </div>
+  </section>
+
   <!-- Couple Section -->
   <section class="section couple-section" id="couple">
     <h2 class="text-3xl font-bold mb-2">THE MAIN CAST</h2>
@@ -225,6 +270,39 @@
       </div>
     </div>
   </section>
+  <!-- Our Love Story Section (placed after lokasi) -->
+  <section class="section" id="our-love-story" style="padding-top:0; padding-bottom:0;">
+    <div class="slide-section fade-in" style="background:#111; color:#fff; max-width:800px; margin:0 auto; min-height:40vh; box-shadow:0 5px 30px rgba(0,0,0,0.35); text-align:left;">
+      <h2 style="font-size:2.3rem; font-weight:bold; margin-bottom:2.4rem; margin-top:0;">Our Love Story</h2>
+      <!-- Episode 1 -->
+      <div style="display:flex; gap:1.7rem; margin-bottom:1.7rem;">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750650073/WhatsApp_Image_2025-06-19_at_10.58.45_1_kjeyjc.jpg" alt="Love Story 1" style="width:220px; height:120px; object-fit:cover; border-radius:10px;">
+        <div>
+          <div style="font-weight:bold; font-size:1.15rem;">Episode 1:<br>Kabar Lewat Udara</div>
+          <div style="font-size:1rem; color:#ddd; margin-bottom:.3rem;">2019</div>
+          <div style="font-size:1rem;">Terpisah jarak yang jauh, membuat komunikasi yang sulit.</div>
+        </div>
+      </div>
+      <!-- Episode 2 -->
+      <div style="display:flex; gap:1.7rem; margin-bottom:1.7rem;">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750650072/WhatsApp_Image_2025-06-19_at_10.59.44_qlnkke.jpg" alt="Love Story 2" style="width:220px; height:120px; object-fit:cover; border-radius:10px;">
+        <div>
+          <div style="font-weight:bold; font-size:1.15rem;">Episode 2:<br>First Meet</div>
+          <div style="font-size:1rem; color:#ddd; margin-bottom:.3rem;">2022</div>
+          <div style="font-size:1rem;">Selang beberapa tahun akhirnya bertemu pertama kali, makan bersama tetapi masih malu-malu.</div>
+        </div>
+      </div>
+      <!-- Episode 3 -->
+      <div style="display:flex; gap:1.7rem;">
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750650071/WhatsApp_Image_2025-06-19_at_10.58.47_rhkbsq.jpg" alt="Love Story 3" style="width:220px; height:120px; object-fit:cover; border-radius:10px;">
+        <div>
+          <div style="font-weight:bold; font-size:1.15rem;">Episode 3:<br>Janji Sehidup Semati</div>
+          <div style="font-size:1rem; color:#ddd; margin-bottom:.3rem;">2025</div>
+          <div style="font-size:1rem;">Tahun ini, semua keraguan dan perjuangan itu hilang. Memulai perjalanan baru bersama.</div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Gallery Section -->
   <section class="section gallery-section" id="gallery">
     <h2 class="text-3xl font-bold mb-2">OUR GALLERY</h2>
@@ -269,19 +347,24 @@
     </div>
   </section>
 
-  <!-- SLIDES SECTION (Ayat & Keluarga) -->
-  <section class="section" id="slides">
-    <!-- Slide Ayat Alkitab -->
-    <div id="slide1" class="slide-section fade-in">
-      <h2 class="text-2xl md:text-4xl font-bold mb-4">Ayat Alkitab Tentang Pernikahan</h2>
-      <blockquote style="font-size:1.3rem;line-height:1.7;">
-        “Sebab itu seorang laki-laki akan meninggalkan ayahnya dan ibunya dan bersatu dengan isterinya, sehingga keduanya menjadi satu daging.”<br>
-        <span style="font-style:italic;">(Kejadian 2:24)</span>
+  <!-- SLIDE WEDDING QUOTES -->
+  <section class="section" id="slide-ayat" style="padding-bottom:0;">
+    <div class="slide-section fade-in" style="min-height:40vh;">
+      <h2 class="text-2xl md:text-4xl font-bold mb-8">Wedding Quotes</h2>
+      <blockquote style="font-size:2rem;line-height:1.6;max-width:900px;margin:0 auto;text-align:center;">
+        Sebab pada awal dunia, Allah menjadikan mereka laki-laki dan perempuan, <br>
+        Sebab itu laki-laki akan meninggalkan ayahnya dan ibunya dan bersatu dengan isterinya, <br>
+        sehingga keduanya itu menjadi satu daging. Demikianlah mereka bukan lagi dua, melainkan satu, <br>
+        Karena itu, apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia<br>
+        <span style="font-style:italic;font-size:1.3rem;">(Markus 10 : 6-9)</span>
       </blockquote>
     </div>
-    <!-- Slide Keluarga yang Mengundang -->
-    <div id="slide2" class="slide-section" style="display:none;">
-      <h2 class="text-2xl md:text-4xl font-bold mb-4">Keluarga yang Turut Mengundang</h2>
+  </section>
+
+  <!-- SLIDE KELUARGA YANG MENGUNDANG -->
+  <section class="section" id="slide-keluarga">
+    <div class="slide-section fade-in" style="min-height:40vh;">
+      <h2 class="text-2xl md:text-4xl font-bold mb-8">Keluarga yang Turut Mengundang</h2>
       <div class="family-columns">
         <div class="family-col">
           <h3>Keluarga Mempelai Pria</h3>
@@ -310,10 +393,6 @@
         Dengan sukacita mengundang Bapak/Ibu/Saudara/i untuk hadir dalam pernikahan putra-putri kami.
       </div>
     </div>
-    <div class="slide-navigation">
-      <button class="slide-nav-btn" id="prevSlide" disabled>&laquo; Sebelumnya</button>
-      <button class="slide-nav-btn" id="nextSlide">Selanjutnya &raquo;</button>
-    </div>
   </section>
 
   <!-- Footer -->
@@ -339,47 +418,6 @@
     <source src="https://res.cloudinary.com/dubdqfwvm/video/upload/v1750478369/OurWeddingSong_hovaai.mp3" type="audio/mpeg">
   </audio>
   <script>
-    // SLIDES NAVIGATION + ANIMASI
-    const slideEls = [document.getElementById('slide1'), document.getElementById('slide2')];
-    let currentSlide = 0;
-    const prevBtn = document.getElementById('prevSlide');
-    const nextBtn = document.getElementById('nextSlide');
-
-    function showSlide(idx) {
-      slideEls.forEach((slide, i) => {
-        if (i === currentSlide) {
-          // Animasi keluar
-          slide.classList.remove('fade-in');
-          slide.classList.add('fade-out');
-          setTimeout(() => {
-            slide.style.display = 'none';
-            slide.classList.remove('fade-out');
-            if(i === idx) {
-              slide.style.display = '';
-              setTimeout(() => slide.classList.add('fade-in'), 10);
-            }
-          }, 500);
-        } else if (i === idx) {
-          // Untuk pertama pindah, pastikan fade-in
-          setTimeout(() => {
-            slide.style.display = '';
-            slide.classList.add('fade-in');
-          }, 510);
-        } else {
-          slide.style.display = 'none';
-          slide.classList.remove('fade-in','fade-out');
-        }
-      });
-      currentSlide = idx;
-      prevBtn.disabled = idx === 0;
-      nextBtn.disabled = idx === slideEls.length - 1;
-    }
-    prevBtn.onclick = () => { if(currentSlide>0) showSlide(currentSlide-1); };
-    nextBtn.onclick = () => { if(currentSlide<slideEls.length-1) showSlide(currentSlide+1); };
-    // Inisialisasi
-    slideEls.forEach((slide,i)=>{slide.style.display = i===0?'':'none';});
-    slideEls[0].classList.add('fade-in');
-
     // Mobile Navigation
     const hamburger = document.getElementById('hamburger');
     const navLinks = document.getElementById('navLinks');
