--- a/index.html
+++ b/index.html
@@ -386,19 +386,31 @@
     </div>
   </section>
 
-  <!-- SLIDE WEDDING QUOTES -->
-  <section class="section" id="slide-ayat" style="padding-bottom:0;">
-    <div class="slide-section fade-in" style="min-height:40vh;">
-      <h2 class="text-2xl md:text-4xl font-bold mb-8">Wedding Quotes</h2>
-      <blockquote style="font-size:2rem;line-height:1.6;max-width:900px;margin:0 auto;text-align:center;">
-        Sebab pada awal dunia, Allah menjadikan mereka laki-laki dan perempuan, <br>
-        Sebab itu laki-laki akan meninggalkan ayahnya dan ibunya dan bersatu dengan isterinya, <br>
-        sehingga keduanya itu menjadi satu daging. Demikianlah mereka bukan lagi dua, melainkan satu, <br>
-        Karena itu, apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia<br>
-        <span style="font-style:italic;font-size:1.3rem;">(Markus 10 : 6-9)</span>
-      </blockquote>
-    </div>
-  </section>
+ <!-- SLIDE WEDDING QUOTES -->
+<section class="section" id="slide-ayat" style="padding-bottom:0;">
+  <div class="slide-section fade-in" style="min-height:40vh;">
+    <h2 class="text-2xl md:text-4xl font-bold mb-8">Wedding Quotes</h2>
+    <blockquote class="wedding-quote-block" style="font-size:2rem;line-height:1.6;max-width:900px;margin:0 auto;text-align:center;">
+      Sebab pada awal dunia, Allah menjadikan mereka laki-laki dan perempuan, <br>
+      Sebab itu laki-laki akan meninggalkan ayahnya dan ibunya dan bersatu dengan isterinya, <br>
+      sehingga keduanya itu menjadi satu daging. Demikianlah mereka bukan lagi dua, melainkan satu, <br>
+      Karena itu, apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia<br>
+      <span style="font-style:italic;font-size:1.3rem;">(Markus 10 : 6-9)</span>
+    </blockquote>
+  </div>
+</section>
+<style>
+/* Responsive Wedding Quotes */
+@media (max-width:600px){
+  .wedding-quote-block {
+    font-size:1rem !important;
+    line-height:1.5 !important;
+  }
+  .wedding-quote-block span {
+    font-size:0.98rem !important;
+  }
+}
+</style>
 
   <!-- SLIDE KELUARGA YANG MENGUNDANG -->
   <section class="section" id="slide-keluarga">
