--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html name=index.html
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -75,24 +76,18 @@
       .slide-section { min-height: unset; }
     }
     .audio-control { position: fixed; bottom: 20px; right: 20px; background-color: var(--nikahfix-red); color: white; width: 50px; height: 50px; border-radius: 50%; display: flex; justify-content: center; align-items: center; cursor: pointer; z-index: 100; box-shadow: 0 2px 10px rgba(0,0,0,0.3);}
-    /* Arrow pointer for audio */
-    #music-pointer {
-      position: absolute;
-      right: 70px;
-      bottom: 10px;
-      width: 50px;
-      height: 50px;
-      pointer-events: none;
-      z-index: 101;
-      display: flex;
-      align-items: center;
-      animation: arrow-bounce 1.2s infinite;
+  </style>
+  <style>
+  /* Responsive Wedding Quotes */
+  @media (max-width:600px){
+    .wedding-quote-block {
+      font-size:1rem !important;
+      line-height:1.5 !important;
     }
-    @keyframes arrow-bounce {
-      0%   { transform: translateY(0);}
-      50%  { transform: translateY(-10px);}
-      100% { transform: translateY(0);}
+    .wedding-quote-block span {
+      font-size:0.98rem !important;
     }
+  }
   </style>
 </head>
 <body>
@@ -217,6 +212,7 @@
       </div>
     </div>
   </section>
+
   <!-- Date Section -->
   <section class="section date-section" id="date">
     <h2 class="text-3xl font-bold mb-2">RELEASE DATE</h2>
@@ -248,6 +244,7 @@
       </div>
     </div>
   </section>
+
   <!-- Location Section -->
   <section class="section location-section" id="location">
     <h2 class="text-3xl font-bold mb-2">TEMPAT PEMBERKATAN</h2>
@@ -288,7 +285,8 @@
       </div>
     </div>
   </section>
-  <!-- Our Love Story Section (pembaharuan posisi episode & deskripsi) -->
+
+  <!-- Our Love Story Section -->
   <section class="section" id="our-love-story" style="padding-top:0; padding-bottom:0;">
     <div class="slide-section fade-in" style="background:#111; color:#fff; max-width:700px; margin:0 auto; box-shadow:0 5px 30px rgba(0,0,0,0.35); text-align:left;">
       <h2 style="font-size:2.3rem; font-weight:bold; margin-bottom:2.4rem; margin-top:0;">Our Love Story</h2>
@@ -342,6 +340,7 @@
       </div>
     </div>
   </section>
+
   <!-- Gallery Section -->
   <section class="section gallery-section" id="gallery">
     <h2 class="text-3xl font-bold mb-2">OUR GALLERY</h2>
@@ -386,31 +385,19 @@
     </div>
   </section>
 
- <!-- SLIDE WEDDING QUOTES -->
-<section class="section" id="slide-ayat" style="padding-bottom:0;">
-  <div class="slide-section fade-in" style="min-height:40vh;">
-    <h2 class="text-2xl md:text-4xl font-bold mb-8">Wedding Quotes</h2>
-    <blockquote class="wedding-quote-block" style="font-size:2rem;line-height:1.6;max-width:900px;margin:0 auto;text-align:center;">
-      Sebab pada awal dunia, Allah menjadikan mereka laki-laki dan perempuan, <br>
-      Sebab itu laki-laki akan meninggalkan ayahnya dan ibunya dan bersatu dengan isterinya, <br>
-      sehingga keduanya itu menjadi satu daging. Demikianlah mereka bukan lagi dua, melainkan satu, <br>
-      Karena itu, apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia<br>
-      <span style="font-style:italic;font-size:1.3rem;">(Markus 10 : 6-9)</span>
-    </blockquote>
-  </div>
-</section>
-<style>
-/* Responsive Wedding Quotes */
-@media (max-width:600px){
-  .wedding-quote-block {
-    font-size:1rem !important;
-    line-height:1.5 !important;
-  }
-  .wedding-quote-block span {
-    font-size:0.98rem !important;
-  }
-}
-</style>
+  <!-- SLIDE WEDDING QUOTES -->
+  <section class="section" id="slide-ayat" style="padding-bottom:0;">
+    <div class="slide-section fade-in" style="min-height:40vh;">
+      <h2 class="text-2xl md:text-4xl font-bold mb-8">Wedding Quotes</h2>
+      <blockquote class="wedding-quote-block" style="font-size:2rem;line-height:1.6;max-width:900px;margin:0 auto;text-align:center;">
+        Sebab pada awal dunia, Allah menjadikan mereka laki-laki dan perempuan, <br>
+        Sebab itu laki-laki akan meninggalkan ayahnya dan ibunya dan bersatu dengan isterinya, <br>
+        sehingga keduanya itu menjadi satu daging. Demikianlah mereka bukan lagi dua, melainkan satu, <br>
+        Karena itu, apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia<br>
+        <span style="font-style:italic;font-size:1.3rem;">(Markus 10 : 6-9)</span>
+      </blockquote>
+    </div>
+  </section>
 
   <!-- SLIDE KELUARGA YANG MENGUNDANG -->
   <section class="section" id="slide-keluarga">
@@ -460,18 +447,9 @@
     <span class="close-modal" onclick="closeModal()">&times;</span>
     <img src="" alt="Modal Image" class="modal-content" id="modalImage">
   </div>
-  <!-- Audio Control + Pointer Arrow -->
+  <!-- Audio Control tanpa garis putih -->
   <div class="audio-control" id="audioControl" style="position:fixed; bottom:20px; right:20px; z-index:100;">
     <i class="fas fa-music"></i>
-    <div id="music-pointer">
-      <!-- SVG Arrow Right -->
-      <svg width="50" height="50" viewBox="0 0 50 50">
-        <g>
-          <path d="M5 30 Q22 30 35 23" stroke="#fff" stroke-width="3" fill="none"/>
-          <polygon points="35,23 32,30 39,27" fill="#fff"/>
-        </g>
-      </svg>
-    </div>
   </div>
   <!-- Audio Element -->
   <audio id="bgMusic" loop>
@@ -538,19 +516,10 @@
       preweddModal.style.display = 'none';
       preweddVideo.pause();
     }
-    // Audio Control + pointer logic
-    const pointer = document.getElementById('music-pointer');
+    // Audio Control logic
     const audioControl = document.getElementById('audioControl');
     const bgMusic = document.getElementById('bgMusic');
     let isPlaying = false;
-
-    function hidePointer() {
-      if(pointer) pointer.style.display = 'none';
-    }
-    audioControl.addEventListener('click', hidePointer);
-    if(bgMusic){
-      bgMusic.addEventListener('play', hidePointer);
-    }
 
     // Enable music on first interaction for mobile compatibility
     function enableMusicOnFirstInteraction() {
@@ -578,3 +547,5 @@
   </script>
 </body>
 </html>
+```
+Semua section sudah lengkap dan tidak ada garis putih di dekat ikon musik.
