--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Undangan Nikah - NIKAHFIX Style</title>
+  <!-- Open Graph Meta Tags for WhatsApp/Facebook Thumbnail -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Undangan Pernikahan Peter & Ochy">
+  <meta property="og:description" content="Kisah Cinta Kami Akan Segera Tayang. Klik untuk melihat undangan pernikahan Peter & Ochy!">
+  <meta property="og:image" content="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750648213/Untitled_image_c4pw4e.jpg">
+  <meta property="og:image:width" content="800">
+  <meta property="og:image:height" content="600">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:url" content="https://peteravaible.github.io/WeddingP-O/">
+  <!-- Akhir Open Graph -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
@@ -26,7 +36,6 @@
       .family-col { min-width: 0; }
       .slide-section { min-height: unset; }
     }
-    /* Fade animation */
     .fade-in { animation: fadeInUp .6s cubic-bezier(.39,.575,.565,1) both;}
     @keyframes fadeInUp {
       0% { opacity:0; transform: translateY(40px);}
@@ -77,7 +86,6 @@
     .audio-control { position: fixed; bottom: 20px; right: 20px; background-color: var(--nikahfix-red); color: white; width: 50px; height: 50px; border-radius: 50%; display: flex; justify-content: center; align-items: center; cursor: pointer; z-index: 100; box-shadow: 0 2px 10px rgba(0,0,0,0.3);}
   </style>
   <style>
-  /* Responsive Wedding Quotes */
   @media (max-width:600px){
     .wedding-quote-block {
       font-size:1rem !important;
