--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image:width" content="800">
   <meta property="og:image:height" content="600">
   <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:url" content="https://peteravaible.github.io/WeddingP-O/">
+  <meta property="og:url" content="https://alamat-link-undanganmu.com">
   <!-- Akhir Open Graph -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -445,7 +445,13 @@
       <a href="https://www.instagram.com/its_cdngg?igsh=dXUzMDBrNTVhZnBu" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
       <a href="https://www.instagram.com/anggara31p?igsh=Y3FrOGkxcjk5Y2xl" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
     </div>
-    <p class="text-gray-500">© 2023 Taroci & Peter Wedding. All Rights Reserved.</p>
+    <p class="text-gray-500">© 2025 Taroci & Peter Wedding. All Rights Reserved.</p>
+    <!-- Tambahan custom pesan dan gambar sesuai permintaan -->
+    <div style="margin-top:2.5em; text-align:center;">
+      <div style="font-size:1.07em; margin-bottom:1em;">
+        <b>FYI : Wedding Song & wedding invitation di buat sendiri <span title="ketawa" style="font-size:1.2em;"/span></b>
+      </div>
+      <div>
   </footer>
   <!-- Image Modal -->
   <div class="modal" id="imageModal">
