--- a/index.html
+++ b/index.html
@@ -445,13 +445,17 @@
       <a href="https://www.instagram.com/its_cdngg?igsh=dXUzMDBrNTVhZnBu" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
       <a href="https://www.instagram.com/anggara31p?igsh=Y3FrOGkxcjk5Y2xl" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
     </div>
-    <p class="text-gray-500">© 2025 Taroci & Peter Wedding. All Rights Reserved.</p>
-    <!-- Tambahan custom pesan dan gambar sesuai permintaan -->
+    <p class="text-gray-500">© 2023 Taroci & Peter Wedding. All Rights Reserved.</p>
     <div style="margin-top:2.5em; text-align:center;">
-      <div style="font-size:1.07em; margin-bottom:1em;">
-        <b>FYI : Wedding Song & wedding invitation di buat sendiri <span title="ketawa" style="font-size:1.2em;"/span></b>
+      <div style="font-size:0.93em; margin-bottom:1em; color:#bdbdbd;">
+        FYI : Wedding Song & wedding invitation di buat sendiri tanpa template <span title="ketawa" style="font-size:1.1em;">😂</span>
       </div>
       <div>
+        <img src="https://res.cloudinary.com/dubdqfwvm/image/upload/v1750658729/WhatsApp_Image_2025-06-23_at_13.05.10_ugbitp.jpg"
+             alt="Bukti Buatan Sendiri"
+             style="width:90px; height:auto; border-radius:1em; margin:0 auto; box-shadow:0 0 10px #0004; display:block;">
+      </div>
+    </div>
   </footer>
   <!-- Image Modal -->
   <div class="modal" id="imageModal">
